--- a/css/index.css
+++ b/css/index.css
@@ -6,12 +6,37 @@
 body{
     background-image: url('../img/nike.png');
     background-repeat: no-repeat;
+
 }
 .texto{
     text-align: right;
-    margin-right: 25%;
+    margin-right: 19%;
 }
 .texto2{
     text-align: right;
-    margin-right: 35%;
+    margin-right: 13%;
+    margin-left: 40%;
+    margin-top: 20px;
+}
+.botao{
+   
+        background-color: #f0f1f1;
+        color: rgb(0, 0, 0);              
+        border: none;            
+        padding: 5px 15px;        
+        border-radius: 8px;       
+        cursor: pointer;           
+        font-size: 16px;          
+      width: 100px;
+      height: 45px;
+      margin-right: 5%;
+      margin-left: 63%;
+      margin-top: 7px;
+      
+      
+      button:hover {
+        background-color: #717375a6; 
+        transform: scale(1.05);    
+      }
+      
 }
